# AyCmakeTemplate-Ensemble

./: .gitignore  CMakeLists.txt  README.md  README_CN.md
main/: CMakeLists.txt  main.cc
src/: CMakeLists.txt
src/ayapi/: CMakeLists.txt
src/ayapi/include/ayapi/: ay_api.h
src/ayapi/src/: ay_api.cc
src/aycore/: CMakeLists.txt
src/aycore/include/aycore/: ay_core.h
src/aycore/src/: ay_core.cc
src/aypvt/: CMakeLists.txt
src/aypvt/include/aypvt/: ay_pvt.h
src/aypvt/src/: ay_pvt.cc
src/ayutils/: CMakeLists.txt
src/ayutils/include/ayutils/: ay_fmt.hpp  ay_new.hpp
